--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,10 @@ script:
   - echo "$GA_CONTENTS" > "dist/v2/${GA_FILENAME}"
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_97cfa6c435f9_key -iv $encrypted_97cfa6c435f9_iv
-    -in deploy_rsa.enc -out deploy_rsa -d
+    -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
 deploy:
   provider: script
   skip_cleanup: true
