--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/dist anders@os-js.org:/data/manual/travis
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/dist/* anders@os-js.org:/data/manual/travis/
   on:
     branch: feature/travis-ci
